2010-02-10  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-status-not-blank-p): Fix the
	regexp for case of "text @user".

	* test/test-twittering-mode.el (test-status-not-blank-p): Add a
	testcase.

2010-02-09  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel): Get a
	buffer associate with the process from calling `process-buffer'
	instead of `current-buffer'.

	* twittering-mode.el (twittering-edit-cancel-status): Confirm
	before calling `twittering-edit-close' when an edit buffer was
	modified.
	(twittering-update-status-from-pop-up-buffer): Mark an edit buffer
	as unmodified.

	* twittering-mode.el (twittering-edit-length-check): Calculate
	length of a tweet with a sign string.

	* twittering-mode.el (twittering-native-retweet): Truncate a tweet
	by width instead of length.
	(twittering-favorite): Likewise.

2010-02-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-goto-previous-status): simplified.

	* twittering-mode.el (twittering-goto-next-status): retrieve
	additional statuses if the function is called at the end of the
	buffer.

	* twittering-mode.el (twittering-render-timeline): use `insert'
	when inserting a status at the end of the buffer in order to keep
	the marker pointing the end of the buffer.

	* twittering-mode.el (twittering-render-timeline): move the
	position correctly even if the buffer is invisible.

2010-02-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-default-sentinel): Delete a
	call to `twittering-release-process' in the BODYFORM to avoid a
	double release.

2010-02-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-default-sentinel): call
	`twittering-release-process' even if some errors happen.
	(twittering-http-get-default-sentinel): remove invocation of
	`twittering-release-process'.

2010-02-08  Satoshi Yatagawa  <yata_github@y.hauN.org>
